Fix highlight video height on mobile

--- a/app/assets/stylesheets/blog/_blog_index.scss
+++ b/app/assets/stylesheets/blog/_blog_index.scss
@@ -79,6 +79,7 @@
 
       .video-thumbnail {
         padding-bottom: 53%;
+        height: auto;
 
         &:before {
           display: none;
